--- a/AdventOfCode.UnitTests/AdventOfCode.UnitTests.csproj
+++ b/AdventOfCode.UnitTests/AdventOfCode.UnitTests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AdventOfCode.Day1\AdventOfCode.Day1.csproj" />
+    <ProjectReference Include="..\AdventOfCode.Day2\AdventOfCode.Day2.csproj" />
   </ItemGroup>
 
 </Project>
