--- a/AdventOfCode.UnitTests/AdventOfCode.UnitTests.csproj
+++ b/AdventOfCode.UnitTests/AdventOfCode.UnitTests.csproj
@@ -16,6 +16,7 @@
     <ProjectReference Include="..\AdventOfCode.Day1\AdventOfCode.Day1.csproj" />
     <ProjectReference Include="..\AdventOfCode.Day2\AdventOfCode.Day2.csproj" />
     <ProjectReference Include="..\AdventOfCode.Day4\AdventOfCode.Day4.csproj" />
+    <ProjectReference Include="..\AdventOfCode.Day5\AdventOfCode.Day5.csproj" />
   </ItemGroup>
 
 </Project>
