Implement Day 7 Part 1

--- a/AdventOfCode.UnitTests/AdventOfCode.UnitTests.csproj
+++ b/AdventOfCode.UnitTests/AdventOfCode.UnitTests.csproj
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\AdventOfCode.Day4\AdventOfCode.Day4.csproj" />
     <ProjectReference Include="..\AdventOfCode.Day5\AdventOfCode.Day5.csproj" />
     <ProjectReference Include="..\AdventOfCode.Day6\AdventOfCode.Day6.csproj" />
+    <ProjectReference Include="..\AdventOfCode.Day7\AdventOfCode.Day7.csproj" />
   </ItemGroup>
 
 </Project>
