--- a/AdventOfCode.UnitTests/AdventOfCode.UnitTests.csproj
+++ b/AdventOfCode.UnitTests/AdventOfCode.UnitTests.csproj
@@ -19,6 +19,7 @@
     <ProjectReference Include="..\AdventOfCode.Day5\AdventOfCode.Day5.csproj" />
     <ProjectReference Include="..\AdventOfCode.Day6\AdventOfCode.Day6.csproj" />
     <ProjectReference Include="..\AdventOfCode.Day7\AdventOfCode.Day7.csproj" />
+    <ProjectReference Include="..\AdventOfCode.Day9\AdventOfCode.Day9.csproj" />
   </ItemGroup>
 
 </Project>
