--- a/AdventOfCode.UnitTests/AdventOfCode.UnitTests.csproj
+++ b/AdventOfCode.UnitTests/AdventOfCode.UnitTests.csproj
@@ -15,6 +15,8 @@
   <ItemGroup>
     <ProjectReference Include="..\AdventOfCode.Day10\AdventOfCode.Day10.csproj" />
     <ProjectReference Include="..\AdventOfCode.Day11\AdventOfCode.Day11.csproj" />
+    <ProjectReference Include="..\AdventOfCode.Day12\AdventOfCode.Day12.csproj" />
+    <ProjectReference Include="..\AdventOfCode.Day13\AdventOfCode.Day13.csproj" />
     <ProjectReference Include="..\AdventOfCode.Day1\AdventOfCode.Day1.csproj" />
     <ProjectReference Include="..\AdventOfCode.Day2\AdventOfCode.Day2.csproj" />
     <ProjectReference Include="..\AdventOfCode.Day4\AdventOfCode.Day4.csproj" />
